# Bazi-Formula

./: .gitignore  AGENTS.md  GitHub提交前检查.md  README.md  RELEASE_NOTES_v0.1.0.md  pyproject.toml  setup.py  开发流程.md  规则说明.md  项目说明.md
.github/workflows/: ci.yml
backend/: local_backend.py
configs/: engine.yaml  input_normalization.yaml  report.yaml  terms.yaml
schemas/: audit.schema.json  chart.schema.json  input.schema.json  report.schema.json  rules.schema.json
src/bazi/: __init__.py  calendar_engine.py  cli.py  judge_engine.py  luck_cycle.py  models.py  pillars.py  reporter.py  rule_data.py  strength.py  ten_gods.py  useful_god.py  (+1 more)
tests/: test_annual_flow.py  test_annual_reading.py  test_audit.py  test_audit_annual_reading_v1.py  test_audit_career_reading.py  test_audit_relationship_reading.py  test_audit_wealth_reading.py  test_career_reading.py  test_cli.py  test_climate_balance.py  test_final_report.py  test_pattern_system.py  test_pipeline.py  test_relationship_reading.py  test_rules.py  test_schemas.py  test_shen_sha.py  test_useful_god.py  test_wealth_reading.py
测试样本/: user_001_chart_golden.json  user_001_rules_golden.json
用户输入/: user_001.json  user_19900421_0316_anqing.json  user_19981009_0000_huainan_from_2400.json
规则映射/: annual_flow_rules.yaml  annual_reading_rules.yaml  career_reading_rules.yaml  climate_rules.yaml  evidence_registry.yaml  final_report_rules.yaml  pattern_rules.yaml  relationship_reading_rules.yaml  shen_sha_rules.yaml  wealth_reading_rules.yaml  候选用神规则.yaml  十神映射.yaml  地支藏干.yaml  最终用神规则.yaml  月令权重.yaml
输出结果/: 最终报告.md
(+13 files in other folders)
